<resources>
    <string name="app_name">Einmaleins</string>
    <string name="taskTextView">Hier könnte Ihre Aufgabe stehen.</string>
    <string name="checkButton">Ergebnis prüfen</string>
    <string name="newTaskButton">Neue Aufgabe</string>
    <string name="labelText">Ergebnis eingeben</string>
    <string-array name="numbers">
        <item>Alle</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="arithmeticTypes">
        <item>+</item>
        <item>x</item>
        <item>-</item>
        <item>:</item>
    </string-array>

    <string name="settings">Einstellungen</string>
    <string name="share">Teilen</string>
    <string name="settings_activity">Einstellungen</string>
    <string name="calculation_activity">Rechnen</string>
    <string name="arithmetic_operation">Rechenart</string>
    <string name="numbers">Ziffern</string>
    <string name="mode">Modus</string>
    <string name="one">Eins</string>
    <string name="two">Zwei</string>
    <string name="three">Drei</string>
    <string name="four">Vier</string>
    <string name="five">Fünf</string>
    <string name="six">Sechs</string>
    <string name="seven">Sieben</string>
    <string name="eight">Acht</string>
    <string name="nine">Neun</string>
    <string name="ten">Zehn</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">:</string>
    <string name="practice">Üben</string>
    <string name="speedOne">Auf Zeit 1</string>
    <string name="speedTwo">Auf Zeit 2</string>
    <string name="hangman">Galgenmännchen</string>
    <string name="right_answer">Richtig!</string>
    <string name="wrong_answer">Leider Falsch.</string>
    <string name="select_all">Alles auswählen</string>
    <string name="unselect_all">Alles abwählen</string>

</resources>