<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <CheckBox
        android:id="@+id/multiplicationCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="onOperationCheckboxClicked"
        android:text="@string/multiplication"
        app:layout_constraintStart_toEndOf="@+id/additionCheckBox"
        app:layout_constraintTop_toTopOf="@+id/additionCheckBox" />

    <CheckBox
        android:id="@+id/subtractionCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onOperationCheckboxClicked"
        android:text="@string/subtraction"
        app:layout_constraintStart_toEndOf="@+id/multiplicationCheckBox"
        app:layout_constraintTop_toTopOf="@+id/multiplicationCheckBox" />

    <CheckBox
        android:id="@+id/divisionCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onOperationCheckboxClicked"
        android:text="@string/division"
        app:layout_constraintStart_toEndOf="@+id/subtractionCheckBox"
        app:layout_constraintTop_toTopOf="@+id/subtractionCheckBox" />

    <CheckBox
        android:id="@+id/additionCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="onOperationCheckboxClicked"
        android:text="@string/addition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operationTextView" />

    <CheckBox
        android:id="@+id/sixCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:checked="true"
        android:onClick="onNumberCheckBoxClicked"
        android:text="@string/six"
        app:layout_constraintStart_toEndOf="@+id/oneCheckBox"
        app:layout_constraintTop_toTopOf="@+id/oneCheckBox" />

    <CheckBox
        android:id="@+id/twoCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="onNumberCheckBoxClicked"
        android:text="@string/two"
        app:layout_constraintStart_toStartOf="@+id/oneCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/oneCheckBox" />

    <CheckBox
        android:id="@+id/fourCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="onNumberCheckBoxClicked"
        android:text="@string/four"
        app:layout_constraintStart_toStartOf="@+id/threeCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/threeCheckBox" />

    <CheckBox
        android:id="@+id/oneCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:onClick="onNumberCheckBoxClicked"
        android:text="@string/one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numbersTextView" />

    <CheckBox
        android:id="@+id/sevenCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="onNumberCheckBoxClicked"
        android:text="@string/seven"
        app:layout_constraintStart_toStartOf="@+id/sixCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/sixCheckBox" />

    <CheckBox
        android:id="@+id/tenCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="onNumberCheckBoxClicked"
        android:text="@string/ten"
        app:layout_constraintStart_toStartOf="@+id/nineCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/nineCheckBox" />

    <CheckBox
        android:id="@+id/eightCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="onNumberCheckBoxClicked"
        android:text="@string/eight"
        app:layout_constraintStart_toStartOf="@+id/sevenCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/sevenCheckBox" />

    <CheckBox
        android:id="@+id/nineCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="onNumberCheckBoxClicked"
        android:text="@string/nine"
        app:layout_constraintStart_toStartOf="@+id/eightCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/eightCheckBox" />

    <CheckBox
        android:id="@+id/threeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="onNumberCheckBoxClicked"
        android:text="@string/three"
        app:layout_constraintStart_toStartOf="@+id/twoCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/twoCheckBox" />

    <CheckBox
        android:id="@+id/fiveCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="onNumberCheckBoxClicked"
        android:text="@string/five"
        app:layout_constraintStart_toStartOf="@+id/fourCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/fourCheckBox" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modeTextView">

        <RadioButton
            android:id="@+id/practiceRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/practice"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="312dp" />

        <RadioButton
            android:id="@+id/speedOneRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/speedOne"
            tools:layout_editor_absoluteX="208dp"
            tools:layout_editor_absoluteY="360dp" />

        <RadioButton
            android:id="@+id/speedTwoRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/speedTwo"
            tools:layout_editor_absoluteX="208dp"
            tools:layout_editor_absoluteY="312dp" />

        <RadioButton
            android:id="@+id/hangmanRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/hangman"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="360dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/operationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/arithmetic_operation"
        app:layout_constraintBottom_toTopOf="@+id/multiplicationCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/numbersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/numbers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additionCheckBox" />

    <TextView
        android:id="@+id/modeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/numbersTextView" />

    <Button
        android:id="@+id/selectAllButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_all"
        app:layout_constraintStart_toStartOf="@+id/fiveCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/fiveCheckBox" />

    <Button
        android:id="@+id/unselectAllButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unselect_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/selectAllButton"
        app:layout_constraintTop_toTopOf="@+id/selectAllButton" />

</androidx.constraintlayout.widget.ConstraintLayout>